@@ -104,3 +104,4 @@ v 1.8:
 	- Removed '- bukkit.command' form the globalgroups permission nodes.
 v 1.9:
 	- Optimize populating Bukkit perms so we no longer calculate the child nodes (Bukkit already does this).
+	- Added a tidy error message for invalid permission entries in GlobalGroups.
